[package]
name = "dse-driver-sys"
version = "0.1.0"
authors = ["Owen Nelson <onelson@gmail.com>"]
edition = "2018"
links = "dse"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
pkg-config = { version = "0.3.15", optional = true }

[features]
default = ["pkg-config"]