[package]
name = "dse-driver-rs"
version = "0.1.0"
authors = ["Owen Nelson <onelson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dse-driver-sys = { path = "../dse-driver-sys" }

[lib]
name = "dse_driver"
path = "src/lib.rs"
